--- a/Theme 7 User Interfaces/productlist.html
+++ b/Theme 7 User Interfaces/productlist.html
@@ -6,33 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Products By Brand</title>
     <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/stylesheet.css" />
 </head>
 
 <body class="productlist">
     <header class="mainNav">
-        <h1>Fashion<span>R</span>Us</h1>
+        <h1>MyFashion</h1>
         <nav>
+            <a href="#">Women</a>
+            <a href="#">Men</a>
             <a href="#">Categories</a>
             <a href="category.html">Brands</a>
-            <a href="#">Seasons</a>
+
         </nav>
     </header>
     <main>
         <h2>Nike</h2>
-        <article class="smallProduct">
-            <img src="https://kea-alt-del.dk/t7/images/webp/640/1163.webp"
-                alt="Sahara Team India Fanwear Round Neck Jersey" />
-            <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
-            <p class="subtle">Tshirts | Nike</p>
-            <p class="price"><span>Prev.</span> DKK 1595,-</p>
-            <div class="discounted">
-                <p>Now DKK 1560,-</p>
-                <p>-34%</p>
-            </div>
-            <a href="product.html">Read More</a>
-        </article>
-        <article class="smallProduct onSale">
+        <template id="smallProductTemplate">
+            <article class="smallProduct">
+                <img class="productImage" src="" alt="Sahara Team India Fanwear Round Neck Jersey" />
+                <h3>Sahara Team India Fanwear Round Neck Jersey</h3>
+                <p class="subtle">Tshirts | Nike</p>
+                <p class="price"><span>Prev.</span> DKK 1595,-</p>
+                <div class="discounted">
+                    <p>Now DKK 1560,-</p>
+                    <p class="procents">-34%</p>
+                </div>
+                <a href="product.html">Read More</a>
+            </article>
+        </template>
+        <!-- <article class="smallProduct onSale">
             <img src="https://kea-alt-del.dk/t7/images/webp/640/1164.webp" alt="Blue T20" />
             <h3>Blue T20 Indian Cricket Jersey</h3>
             <p class="subtle">Tshirts | Nike</p>
@@ -75,8 +78,9 @@
                 <p>-34%</p>
             </div>
             <a href="product.html">Read More</a>
-        </article>
+        </article> -->
     </main>
+    <script src="js/productlist.js"></script>
 </body>
 
 </html>
