--- a/Theme 7 User Interfaces/category.html
+++ b/Theme 7 User Interfaces/category.html
@@ -6,16 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Brands</title>
     <link rel="stylesheet" href="css/base.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/stylesheet.css" />
 </head>
 
 <body class="category">
     <header class="mainNav">
-        <h1>Fashion<span>R</span>Us</h1>
+        <h1>MyFashion</h1>
         <nav>
+            <a href="#">Women</a>
+            <a href="#">Men</a>
             <a href="#">Categories</a>
             <a href="category.html">Brands</a>
-            <a href="#">Seasons</a>
+
         </nav>
     </header>
     <main>
