--- a/Theme 7 User Interfaces/category.html
+++ b/Theme 7 User Interfaces/category.html
@@ -21,7 +21,7 @@
         </nav>
     </header>
     <main>
-        <section class="letterLinks">
+        <!-- <section class="letterLinks">
             <ol>
                 <li><a href="#letter_a">A</a></li>
                 <li><a href="#letter_b">B</a></li>
@@ -31,20 +31,19 @@
                 <li><a href="#letter_f">F</a></li>
                 <li><a href="#letter_g">G</a></li>
                 <li><a href="#letter_h">H</a></li>
-                <li><a href="#letter_i">I</a></li>
-                <li><a href="#letter_j">J</a></li>
             </ol>
-        </section>
+        </section> -->
+        <template>
+            <li><a href="productlist.html">Artengo</a></li>
+        </template>
         <div class="brandList">
             <section class="letterGroup" id="letter_a">
                 <h2>A</h2>
                 <ol>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
                 </ol>
             </section>
-            <section class="letterGroup" id="letter_b">
+
+            <!-- <section class="letterGroup" id="letter_b">
                 <h2>B</h2>
                 <ol>
                     <li><a href="productlist.html">BOSS</a></li>
@@ -99,25 +98,12 @@
                     <li><a href="productlist.html">Artengo</a></li>
                     <li><a href="productlist.html">Artengo</a></li>
                 </ol>
-            </section>
-            <section class="letterGroup" id="letter_i">
-                <h2>I</h2>
-                <ol>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
-                </ol>
-            </section>
-            <section class="letterGroup" id="letter_j">
-                <h2>J</h2>
-                <ol>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
-                </ol>
+            </section> -->
+
             </section>
         </div>
     </main>
+    <script src="js/category.js"></script>
 </body>
 
 </html>
