--- a/Theme 7 User Interfaces/category.html
+++ b/Theme 7 User Interfaces/category.html
@@ -21,28 +21,21 @@
         </nav>
     </header>
     <main>
-        <!-- <section class="letterLinks">
+        <section class="letterLinks">
             <ol>
-                <li><a href="#letter_a">A</a></li>
-                <li><a href="#letter_b">B</a></li>
-                <li><a href="#letter_c">C</a></li>
-                <li><a href="#letter_d">D</a></li>
-                <li><a href="#letter_e">E</a></li>
-                <li><a href="#letter_f">F</a></li>
-                <li><a href="#letter_g">G</a></li>
-                <li><a href="#letter_h">H</a></li>
             </ol>
-        </section> -->
-        <template>
-            <li><a href="productlist.html">Artengo</a></li>
+        </section>
+        <template id="linkTemplate">
+            <li><a href="productlist.html">A</a></li>
         </template>
-        <div class="brandList">
+        <template id="sectionTemplate">
             <section class="letterGroup" id="letter_a">
                 <h2>A</h2>
                 <ol>
                 </ol>
             </section>
-
+        </template>
+        <div class="brandList">
             <!-- <section class="letterGroup" id="letter_b">
                 <h2>B</h2>
                 <ol>
