--- a/Theme 7 User Interfaces/productlist.html
+++ b/Theme 7 User Interfaces/productlist.html
@@ -32,7 +32,7 @@
                     <p>Now DKK 1560,-</p>
                     <p class="procents">-34%</p>
                 </div>
-                <a href="product.html">Read More</a>
+                <a href="product.html?id=2801">Read More</a>
             </article>
         </template>
         <!-- <article class="smallProduct onSale">
