--- a/Theme 7 User Interfaces/category.html
+++ b/Theme 7 User Interfaces/category.html
@@ -12,20 +12,13 @@
 <body class="category">
     <header class="mainNav">
         <h1>MyFashion</h1>
-        <nav>
-            <a href="#">Women</a>
-            <a href="#">Men</a>
-            <a href="#">Categories</a>
-            <a href="category.html">Brands</a>
-
-        </nav>
     </header>
     <main>
         <section class="letterLinks">
             <ol>
             </ol>
         </section>
-        <template id="linkTemplate">
+        <template class="linkTemplate">
             <li><a href="productlist.html">A</a></li>
         </template>
         <template id="sectionTemplate">
@@ -36,63 +29,6 @@
             </section>
         </template>
         <div class="brandList">
-            <!-- <section class="letterGroup" id="letter_b">
-                <h2>B</h2>
-                <ol>
-                    <li><a href="productlist.html">BOSS</a></li>
-                    <li><a href="productlist.html">BOSS</a></li>
-                    <li><a href="productlist.html">BOSS</a></li>
-                </ol>
-            </section>
-            <section class="letterGroup" id="letter_c">
-                <h2>C</h2>
-                <ol>
-                    <li><a href="productlist.html">Carhart</a></li>
-                    <li><a href="productlist.html">Carhart</a></li>
-                    <li><a href="productlist.html">Carhart</a></li>
-                </ol>
-            </section>
-            <section class="letterGroup" id="letter_d">
-                <h2>D</h2>
-                <ol>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
-                </ol>
-            </section>
-            <section class="letterGroup" id="letter_e">
-                <h2>E</h2>
-                <ol>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
-                </ol>
-            </section>
-            <section class="letterGroup" id="letter_f">
-                <h2>F</h2>
-                <ol>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
-                </ol>
-            </section>
-            <section class="letterGroup" id="letter_g">
-                <h2>G</h2>
-                <ol>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
-                </ol>
-            </section>
-            <section class="letterGroup" id="letter_h">
-                <h2>H</h2>
-                <ol>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
-                    <li><a href="productlist.html">Artengo</a></li>
-                </ol>
-            </section> -->
-
             </section>
         </div>
     </main>
