--- a/Theme 7 User Interfaces/product.html
+++ b/Theme 7 User Interfaces/product.html
@@ -12,12 +12,6 @@
 <body class="product">
     <header class="mainNav">
         <h1>MyFashion</h1>
-        <nav>
-            <a href="#">Women</a>
-            <a href="#">Men</a>
-            <a href="#">Categories</a>
-            <a href="category.html">Brands</a>
-        </nav>
     </header>
     <main>
         <ol class="breadcrumbs">
@@ -27,11 +21,10 @@
             <li class="productname">Sahara Team India Fanwear Round Neck Jersey</li>
         </ol>
         <img class="productimage" src="" alt="Sahara Team India Fanwear Round Neck Jersey" />
-        <section class="purchaseBox">
-            <h3 class="productName">Sahara Team India Fanwear Round Neck Jersey</h3>
-            <p class="subtle">Nike | Tshirts</p>
-        </section>
+
         <section class="info">
+            <h3 class="productName">Sahara Team India Fanwear Round Neck Jersey</h3>
+            <h4 class="subtle">Nike | Tshirts</h4>
             <h2>Product Information</h2>
             <h4 class="soldOut"><span></span></h4>
             <h4 class="gender">Gender: <span></span></h4>
